--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+# Node dependencies
 node_modules/
+
+# SQLite database files
+*.sqlite
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# React / Frontend build output
+/frontend/build
+/frontend/dist
+
+# Backend build output (if any)
+/backend/build
+/backend/dist
+
+# Testing coverage
+/coverage
+
+# Misc
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp
+.pnp.js
