--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,84 @@
+# -------------------
 # Node dependencies
+# -------------------
 node_modules/
 
+# -------------------
 # SQLite database files
+# -------------------
 *.sqlite
 
+# -------------------
 # Environment variables
+# -------------------
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# -------------------
 # React / Frontend build output
+# -------------------
 /frontend/build
 /frontend/dist
 
+# -------------------
 # Backend build output (if any)
+# -------------------
 /backend/build
 /backend/dist
 
+# -------------------
 # Testing coverage
+# -------------------
 /coverage
 
-# Misc
+# -------------------
+# Flutter / Dart
+# -------------------
+# Flutter / Dart
+/flutter/.dart_tool/
+/flutter/.packages
+/flutter/.pub/
+/flutter/build/
+
+/flutter/android/.gradle/
+/flutter/android/local.properties
+/flutter/android/key.properties
+/flutter/android/**/GeneratedPluginRegistrant.java
+
+/flutter/ios/Flutter/App.framework
+/flutter/ios/Flutter/Flutter.framework
+/flutter/ios/Flutter/Generated.xcconfig
+/flutter/ios/Flutter/app.flx
+/flutter/ios/Flutter/Flutter.podspec
+/flutter/ios/Pods/
+/flutter/ios/.symlinks/
+/flutter/ios/Runner.xcworkspace/
+/flutter/ios/Flutter/Flutter-Debug.xcconfig
+/flutter/ios/Flutter/Flutter-Release.xcconfig
+
+/flutter/macos/Flutter/ephemeral/
+/flutter/macos/Runner.xcworkspace/
+/flutter/macos/Pods/
+/flutter/macos/Flutter/GeneratedPluginRegistrant.swift
+
+/flutter/windows/flutter/ephemeral/
+/flutter/linux/flutter/ephemeral/
+
+/flutter/.idea/
+/flutter/.vscode/
+/flutter/*.iml
+
+# -------------------
+# Misc / OS
+# -------------------
 .DS_Store
+Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnp
 .pnp.js
+
